# Skyrim-iSIFExtra

./: .gitignore  README.md
SKSE/: CMakeLists.txt  CMakePresets.json  vcpkg.json
SKSE/Plugins/SIF/: iSIFExtra.json.example
SKSE/src/: FactionCondition.cpp  FactionCondition.h  FormIDParser.cpp  FormIDParser.h  PCH.h  PackageCondition.cpp  PackageCondition.h  SIF_API.h  UnconsciousCondition.cpp  UnconsciousCondition.h  main.cpp
tools/: SIF-AI-RULE-REFERENCE.md  sif_icon_builder.py
